又不行了是怎樣?

--- a/src/main/resources/templates/payTool.html
+++ b/src/main/resources/templates/payTool.html
@@ -53,7 +53,12 @@
 
     <div>
         <h2 class="text-center btn-success d-flex justify-content-center align-items-center">支付搜尋</h2>
-        <div>支付選擇</div>
+        <div>支付選擇1234</div>
+        <div class="table-bordered" id="chooseZF">
+            <table class="table">
+                <tr><th>ID</th><th>PLATFORM_NAME</th><th>PLATFORM_CODE</th><th>SUCCESS_URL</th><th>QUERY_URL</th><th>REQUERT_VALUE</th></tr>
+            </table>
+        </div>
     </div>
 </div>
 
